cabal-version:      2.4
name:               geofunc
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Abhiroop
maintainer:         asiamgenius@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable geofunc
    main-is:          Main.hs
    other-modules:    SquareLimit
                      Start

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , diagrams
                    , diagrams-lib >= 1.4.6.2
                    , diagrams-svg >= 1.4.3.2
    hs-source-dirs:   app
    default-language: Haskell2010
